docs/service-mesh/ambient-mesh/waypoint-proxy.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: web-api
  namespace: default
  annotations:
    istio.io/service-account: web-api
spec:
  gatewayClassName: istio-mesh
